<?xml version="1.0" encoding="UTF-8"?>
<!--
  ERP Matrícula — Projeto Didático DDD
  =====================================
  Fase 4 ativa a camada web: spring-boot-starter-web e spring-boot-starter-validation
  foram adicionados nesta fase. O domínio DDD não depende de HTTP — a ativação é feita
  na camada de interface (Controllers REST) sem contaminar o modelo de domínio.
  Decisão: D-04-01 — Controllers REST adicionados na Fase 4 (interface-docker-e-material-didatico)
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- ======================================================
         Parent: Spring Boot BOM gerencia versões de dependências
         ====================================================== -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.3</version>
        <relativePath/>
    </parent>

    <!-- ======================================================
         Coordenadas do projeto (D-06)
         ====================================================== -->
    <groupId>br.com.escola</groupId>
    <artifactId>erp-matricula</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ERP Matrícula</name>
    <description>Projeto didático DDD — Domínio de Matrícula Escolar em Java 21 + Spring Boot 3.x + MyBatis</description>

    <!-- ======================================================
         Propriedades
         ====================================================== -->
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <!-- ======================================================
         Dependências (D-07)
         ====================================================== -->
    <dependencies>

        <!-- Spring Boot core — base para todos os outros starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <!-- Fase 4: Camada Web REST — ativa servidor HTTP Tomcat embutido (porta 8080 por padrão).
             Inclui Jackson para serialização JSON automática dos DTOs para resposta HTTP.
             Versão gerenciada pelo Spring Boot BOM (spring-boot-starter-parent 3.5.3) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- Fase 4: Validação de entrada — Bean Validation (JSR-380) para @Valid nos Controllers.
             Permite @NotBlank, @NotNull, @Size nas classes de Command recebidas via HTTP.
             Versão gerenciada pelo Spring Boot BOM -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- MyBatis — mapeamento explícito domínio ↔ persistência (ADR-001)
             Versão EXPLÍCITA: 3.0.5 compatível com Spring Boot 3.5.x
             Não gerenciado pelo Spring Boot BOM — versão verificada em Maven Central 2026-06-20 -->
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>3.0.5</version>
        </dependency>

        <!-- Driver JDBC PostgreSQL — versão gerenciada pelo Spring Boot BOM -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
        </dependency>

        <!-- Flyway core — migrações de schema versionadas -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <!-- versão gerenciada pelo Spring Boot BOM -->
        </dependency>

        <!-- OBRIGATÓRIO para Flyway 10+ com PostgreSQL:
             Flyway 10 separou suporte de bancos em módulos separados.
             Sem esta dependência: "No dialect found for database 'PostgreSQL'" ao iniciar.
             Pitfall 3 do RESEARCH.md — versão gerenciada pelo Spring Boot BOM -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
            <!-- versão gerenciada pelo Spring Boot BOM -->
        </dependency>

        <!-- Testes — scope test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <!-- ======================================================
         Plugins
         ====================================================== -->
    <build>
        <plugins>
            <!-- spring-boot-maven-plugin: permite `mvn spring-boot:run` -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
